--- a/ProyectoHospital/Web/src/app/pages/medicos/paginar/paginar.component.html
+++ b/ProyectoHospital/Web/src/app/pages/medicos/paginar/paginar.component.html
@@ -33,7 +33,7 @@
         <ng-container matColumnDef="acciones">
             <th mat-header-cell *matHeaderCellDef> Acciones </th>
             <td mat-cell *matCellDef="let element">                
-                <button mat-icon-button color="primary" aria-label="Example icon button with a home icon">
+                <button mat-icon-button color="primary" (click)="actualizarMedico(element.id)" aria-label="Example icon button with a home icon">
                     <mat-icon>edit</mat-icon>
                 </button>
                 <button mat-icon-button color="warn" (click)="eliminarMedico(element.id)" aria-label="Example icon button with a home icon">
