--- a/ProyectoHospital/Web/src/app/app.component.html
+++ b/ProyectoHospital/Web/src/app/app.component.html
@@ -34,6 +34,21 @@
                 </button>
             </mat-menu>
 
+            <!-- Consultas -->
+            <!--<button mat-icon-button [matMenuTriggerFor]="consultas" aria-label="Example icon-button with a menu">
+                <mat-icon>health_and_safety</mat-icon>
+            </button>
+            <mat-menu #consultas="matMenu">
+                <button [routerLink]="'/consultas/pag/0/5'" mat-menu-item>
+                    <mat-icon>toc</mat-icon>
+                    <span>Ver consultas</span>
+                </button>                
+                <button [routerLink]="'/consultas'" mat-menu-item>
+                    <mat-icon>add</mat-icon>
+                    <span>Crear consulta</span>
+                </button>
+            </mat-menu>-->
+
         </mat-toolbar-row>
     </mat-toolbar>
 </p>
