--- a/ProyectoHospital/Web/src/app/pages/medicos/paginar/paginar.component.html
+++ b/ProyectoHospital/Web/src/app/pages/medicos/paginar/paginar.component.html
@@ -30,8 +30,20 @@
             <td mat-cell *matCellDef="let element"> {{element.correoElectronico}} </td>
         </ng-container>
 
+        <ng-container matColumnDef="consultas">
+            <th mat-header-cell *matHeaderCellDef> Consultas </th>
+            <td mat-cell *matCellDef="let element">                
+                <button mat-icon-button color="primary" (click)="crearConsulta(element.id)" aria-label="Example icon button with a home icon">
+                    <mat-icon>add</mat-icon>
+                </button>
+                <button mat-icon-button color="primary" aria-label="Example icon button with a home icon">
+                    <mat-icon>visibility</mat-icon>
+                </button>
+            </td>
+        </ng-container>
+
         <ng-container matColumnDef="acciones">
-            <th mat-header-cell *matHeaderCellDef> Acciones </th>
+            <th mat-header-cell *matHeaderCellDef> Editar / Eliminar </th>
             <td mat-cell *matCellDef="let element">                
                 <button mat-icon-button color="primary" (click)="actualizarMedico(element.id)" aria-label="Example icon button with a home icon">
                     <mat-icon>edit</mat-icon>
