--- a/ProyectoHospital/Web/src/app/pages/medicos/paginar/paginar.component.html
+++ b/ProyectoHospital/Web/src/app/pages/medicos/paginar/paginar.component.html
@@ -36,7 +36,7 @@
                 <button mat-icon-button color="primary" (click)="crearConsulta(element.id)" aria-label="Example icon button with a home icon">
                     <mat-icon>add</mat-icon>
                 </button>
-                <button mat-icon-button color="primary" aria-label="Example icon button with a home icon">
+                <button mat-icon-button color="primary" (click)="leerConsultas(element.id, element.nombre)" aria-label="Example icon button with a home icon">
                     <mat-icon>visibility</mat-icon>
                 </button>
             </td>
