--- a/ProyectoHospital/Web/src/app/pages/consultas/paginar/paginar.component.html
+++ b/ProyectoHospital/Web/src/app/pages/consultas/paginar/paginar.component.html
@@ -36,10 +36,10 @@
         <ng-container matColumnDef="acciones">
             <th mat-header-cell *matHeaderCellDef> Acciones </th>
             <td mat-cell *matCellDef="let element">
-                <button mat-icon-button color="primary" aria-label="Example icon button with a home icon">
+                <button mat-icon-button color="primary" (click)="actualizar(element.id)" aria-label="Example icon button with a home icon">
                     <mat-icon>edit</mat-icon>
                 </button>
-                <button mat-icon-button color="warn" aria-label="Example icon button with a home icon">
+                <button mat-icon-button color="warn" (click)="eliminar(element.id)" aria-label="Example icon button with a home icon">
                     <mat-icon>delete</mat-icon>
                 </button>
             </td>
