--- a/ProyectoHospital/Web/src/app/pages/consultas/paginar/paginar.component.html
+++ b/ProyectoHospital/Web/src/app/pages/consultas/paginar/paginar.component.html
@@ -75,4 +75,11 @@
         <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
     </table>
 
+    <div class="paginador-cntr" *ngIf="paginas != null">
+        <li *ngFor="let pagina of paginas">
+            <!--<a [routerLink]="['/medicos/pag/', pagina, '/5']"></a>-->
+            <button mat-raised-button color="primary" (click)="paginar(pagina)">{{ pagina + 1 }}</button>
+        </li>
+    </div>
+
 </div>
